# zero2prod

./: Cargo.toml  README.md  marcoteorico.md
.github/workflows/: audit.yml  general.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
