[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.14.0"
config = "0.15.25"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls-ring-webpki", "macros", "postgres", "uuid", "chrono", "migrate"] }

[dev-dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
